# adpcm_packer

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  codec.cpp  codec.h  main.cpp
src/: main.cpp  pitch_estimator.h  wav_reader.h
test/: test_basic_adpcm_a.json  test_basic_adpcm_b.json  test_boundary_32.json  test_octave.json  test_rootnote_auto.json  test_rootnote_fixed.json  test_rootnote_notename.json  test_samplerate_24k.json  test_samplerate_32k.json  test_samplerate_8k.json  test_shorthand.json
